fix: spacing

--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -51,6 +51,9 @@
   margin: 0 0 1em 0;
   justify-content: space-between;
 }
+.exp-slider {
+  margin: 0 0 2.5em 0;
+}
 legend {
   font-family: Georgia, "Times New Roman", Times, serif;
   margin-bottom: 0;
